--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,1 +1,26 @@
-{{ content_for_header }}{{ content_for_layout }}
+<!doctype html>
+    <html>
+    <head>
+      <title>{{ page_title }}</title>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <meta name="description" content="{{ page_description | escape }}">
+      <link rel="canonical" href="{{ canonical_url }}">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+      <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+       <script src="https://cdn.tailwindcss.com"></script>
+      {{ content_for_header }} 
+      
+      
+      
+    </head>
+    <body>
+      <main role="main">
+        {{ content_for_layout }}
+      </main>
+    
+    </body>
+    </html>
+    
