--- a/snippets/product-modal.liquid
+++ b/snippets/product-modal.liquid
@@ -6,7 +6,7 @@
     <div class="flex">
 
       <div class="product-image mb-4 relative w-1/2">
-        <img id="modal-product-image" class="w-full h-full object-cover rounded-lg" src="" alt="">
+        <img id="modal-product-image" class="w-full h-full object-cover rounded-lg" width="" height="" alt="Photo of product">
       </div>
 
       <div class="ml-6 w-1/2">
