--- a/snippets/product-modal.liquid
+++ b/snippets/product-modal.liquid
@@ -1,58 +1,85 @@
-<div id="productModal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 hidden">
-  <div class="bg-white p-6 rounded-lg max-w-5xl w-3/4 relative">
+<div id="productModal" class="fixed inset-0 z-50 flex md:items-center items-end justify-center bg-black bg-opacity-50 hidden">
+  <div class="bg-white p-6 rounded-t-2xl md:rounded-lg max-w-5xl w-full md:w-3/4 relative">
 
     <button onclick="closeModal(false)" class="absolute top-2 right-2 text-gray-500 text-4xl font-bold">&times;</button>
 
-    <div class="flex">
+    <div class="flex flex-col md:flex-row md:items-start">
 
-      <div class="product-image mb-4 relative w-1/2 swiper-modal-container">
-        <img id="modal-product-image" class="w-full h-full object-cover rounded-lg" width="" height="" alt="Photo of product">
-      </div>
 
-      <div class="ml-6 w-1/2">
-        <h2 id="modal-product-title" class="text-3xl font-bold"></h2>
-        {% if section.settings.show_reviews %}
-          <div id="modal-product-reviews" class="flex items-center justify-center space-x-2">
-              {% assign rating = product.reviews.rating | default: 0 %}
-              {% assign reviews_count = product.reviews.count | default: 0 %}
-              <div class="flex">
-                  {% for i in (1..5) %}
-                  {% if i <= rating %}
-                  <svg class="w-4 h-4 text-yellow-500 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                      <path d="M10 15l-5.878 3.09 1.123-6.545-4.762-4.635 6.582-.957L10 .458l2.935 5.495 6.582.957-4.762 4.635 1.123 6.545z" />
-                  </svg>
-                  {% else %}
-                  <svg class="w-4 h-4 text-gray-300 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                      <path d="M10 15l-5.878 3.09 1.123-6.545-4.762-4.635 6.582-.957L10 .458l2.935 5.495 6.582.957-4.762 4.635 1.123 6.545z" />
-                  </svg>
-                  {% endif %}
-                  {% endfor %}
-              </div>
-              {% if reviews_count > 0 %}
-              <span class="text-xs text-gray-500">({{ reviews_count }} reviews)</span>
-              {% else %}
-              <span class="text-xs text-gray-500">(No reviews)</span>
-              {% endif %}
+      <div class="swiper-container-2 overflow-hidden product-image mb-4 relative w-full md:w-1/2 hidden md:block">
+        <div class="swiper-wrapper">
+            <img id="modal-product-image" class="swiper-slide w-full h-full object-cover rounded-lg" alt="Photo of product" width="340" height="340">
           </div>
-          {% endif %}
-        <p id="modal-product-price" class="text-gray-700 text-2xl font-bold mt-2"></p>
         
+          <!-- Pagination -->
+          <div class="swiper-pagination"></div>
+        
+          <!-- Navigation buttons -->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+        
+      
+
+
+      <div class="ml-0 md:ml-6 w-full md:w-1/2 p-4 md:p-0 bg-white md:bg-transparent rounded-t-2xl md:rounded-none">
+        <h2 id="modal-product-title" class="text-2xl mb-8 md:text-3xl font-bold mb-4"></h2>
 
         
-        <div id="modal-product-variants" class="product-variants mt-4">
-          
+        {% if section.settings.show_reviews %}
+        <div id="modal-product-reviews" class="flex items-center  space-x-2">
+          {% assign rating = product.reviews.rating | default: 0 %}
+          {% assign reviews_count = product.reviews.count | default: 0 %}
+          <div class="flex">
+            {% for i in (1..5) %}
+            {% if i <= rating %}
+            <svg class="w-4 h-4 text-yellow-500 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+              <path d="M10 15l-5.878 3.09 1.123-6.545-4.762-4.635 6.582-.957L10 .458l2.935 5.495 6.582.957-4.762 4.635 1.123 6.545z" />
+            </svg>
+            {% else %}
+            <svg class="w-4 h-4 text-gray-300 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+              <path d="M10 15l-5.878 3.09 1.123-6.545-4.762-4.635 6.582-.957L10 .458l2.935 5.495 6.582.957-4.762 4.635 1.123 6.545z" />
+            </svg>
+            {% endif %}
+            {% endfor %}
+          </div>
+          {% if reviews_count > 0 %}
+          <span class="text-xs text-gray-500">({{ reviews_count }} reviews)</span>
+          {% else %}
+          <span class="text-xs text-gray-500">(No reviews)</span>
+          {% endif %}
         </div>
-        <button id="modal-product-button" onclick="closeModal(true)" class="mt-6 w-full bg-[#CB8A3D] text-white py-4 rounded-lg font-bold text-lg"></button>
-        <p id="modal-product-date" class="text-gray-700 text-lg font-bold mt-2"></p>
+        {% endif %}
+        
+        <p id="modal-product-price" class="text-gray-700 text-2xl font-bold mt-2"></p>
+
+        <div id="modal-product-variants" class="product-variants my-8"></div>
+
+        <button id="modal-product-button" onclick="closeModal(true)" class="mt-6  w-full bg-[#CB8A3D] text-white py-4 rounded-lg font-bold text-lg "></button>
+
+        <p id="modal-product-date" class="text-gray-700 text-lg font-bold mt-2 text-center"></p>
       </div>
     </div>
   </div>
 </div>
+
 <script src="{{ 'modal-logic.js' | asset_url }}" defer></script>
 
 
 <script>
   const productCollection = {{ collections.all.products | json }};
   
-
+  const swiper2 = new Swiper('.swiper-container-2', {
+    slidesPerView: 1,
+    spaceBetween: 0,
+    pagination: {
+      el: '.swiper-container-2 .swiper-pagination',
+      clickable: true,
+    },
+    navigation: {
+      nextEl: '.swiper-container-2 .swiper-button-next',
+      prevEl: '.swiper-container-2 .swiper-button-prev',
+    },
+    loop: true,
+  });
 </script>
