--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,12 +1,18 @@
 <div class="w-full py-8 px-6">
-    <div class="flex justify-between items-center py-8 px-12">
-      <h1 class="text-4xl font-bold">Best Sellers</h1>
-      <div>
-        <a href="/collections/all" class="text-black-700 py-2 px-6 text-lg font-semibold border-2 border-black rounded-full">View All</a>
-      </div>
+  <div class="flex justify-between items-center py-8 px-12">
+    <h1 class="text-4xl font-bold">Best Sellers</h1>
+    <div class="hidden md:block"> 
+      <a href="/collections/all" class="text-black-700 py-2 px-6 text-lg font-semibold border-2 border-black rounded-full">View All</a>
     </div>
-  
-    {% section 'swiper-product' %}
-  
   </div>
+
+  {% section 'swiper-product' %}
+
+  <div class="block md:hidden mt-6 flex justify-center"> 
+    <a href="/collections/all" class="text-black-700 py-2 px-6 text-lg font-semibold border-2 border-black rounded-full">View All</a>
+  </div>
+  
+</div>
+
+
   
