--- a/snippets/swiper-container.liquid
+++ b/snippets/swiper-container.liquid
@@ -75,7 +75,7 @@
         </div>
         {% endfor %}
     </div>
-    <div class="swiper-pagination pb-6"></div>
+    <div class="swiper-pagination pb-1 md:pb-10 lg:pb-25 lg:top-0 lg:absolute"></div>
 </div>
 
 {% render 'product-modal' %}
