--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -8,7 +8,7 @@
 
   {% section 'swiper-product' %}
 
-  <div class="block md:hidden mt-6 flex justify-center"> 
+  <div class="relative md:hidden mt-1 flex justify-center"> 
     <a href="/collections/all" class="text-black-700 py-2 px-6 text-lg font-semibold border-2 border-black rounded-full">View All</a>
   </div>
   
