--- a/snippets/product-modal.liquid
+++ b/snippets/product-modal.liquid
@@ -1,5 +1,5 @@
-<div id="productModal" class="fixed inset-0 z-50 flex md:items-center items-end justify-center bg-black bg-opacity-50 hidden">
-  <div class="bg-white p-6 rounded-t-2xl md:rounded-lg max-w-5xl w-full md:w-3/4 relative">
+<div id="productModal"  class="fixed inset-0 z-50 flex md:items-center items-end justify-center bg-black bg-opacity-50 hidden" onclick="checkClickOutside(event)">
+  <div id="modal-content" class="bg-white p-6 rounded-t-2xl md:rounded-lg max-w-5xl  w-full md:w-3/4 relative">
 
     <button onclick="closeModal(false)" class="absolute top-2 right-2 text-gray-500 text-4xl font-bold">&times;</button>
 
@@ -12,12 +12,26 @@
           </div>
 
           <div class="swiper-pagination  "></div>
+ 
+            <div class=" custom-prev absolute bg-black text-white w-10 h-10 rounded-full flex items-center justify-center bottom-4 right-20 z-10">
+              <button onclick="swiper2.slidePrev()">
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 12H5m7-7l-7 7 7 7" />
+                </svg>                
+              </button>
+            </div>
 
-          <div class="swiper-button-prev" ></div>
-          <div class="swiper-button-next"></div>
+            <div class=" custom-next absolute bg-black text-white w-10 h-10 rounded-full flex items-center justify-center bottom-4 right-4 z-10">
+              <button onclick="swiper2.slideNext()">
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7-7l7 7-7 7" />
+                </svg>
+              </button>
+            </div>
+        
         </div>
         
-      <div class="ml-0 md:ml-6 w-full md:w-1/2 p-4 md:p-0 bg-white md:bg-transparent rounded-t-2xl md:rounded-none">
+        <div class="ml-0 md:ml-6 w-full md:w-1/2 p-4 md:p-0 bg-white md:bg-transparent rounded-t-2xl md:rounded-none">
         <h2 id="modal-product-title" class="text-2xl mb-8 md:text-3xl font-bold mb-4"></h2>
 
         
@@ -65,6 +79,13 @@
 <script>
   const productCollection = {{ collections.all.products | json }};
   
+  function checkClickOutside(event) {
+
+    const modalContent = document.getElementById('modal-content');
+    if (!modalContent.contains(event.target)) {
+      closeModal(false); 
+    }
+  }
   const swiper2 = new Swiper('.swiper-container-2', {
     slidesPerView: 1,
     spaceBetween: 0,
@@ -72,10 +93,7 @@
       el: '.swiper-container-2 .swiper-pagination',
       clickable: true,
     },
-    navigation: {
-      nextEl: '.swiper-container-2 .swiper-button-next',
-      prevEl: '.swiper-container-2 .swiper-button-prev',
-    },
+    
     loop: true,
   });
 </script>
