--- a/sections/swiper-product.liquid
+++ b/sections/swiper-product.liquid
@@ -4,9 +4,21 @@
   "settings": [
     {
       "type": "number",
-      "id": "slides_per_view",
-      "label": "Number of slides",
+      "id": "slides_per_view_lg",
+      "label": "Number of slides large screen",
       "default": 4
+    },
+    {
+      "type": "number",
+      "id": "slides_per_view_md",
+      "label": "Number of slides medium screen",
+      "default": 2
+    },
+    {
+      "type": "number",
+      "id": "slides_per_view_sm",
+      "label": "Number of slides small screen",
+      "default": 1
     },
     {
       "type": "checkbox",
